# html_diff

./: Cargo.toml  Dockerfile  README  package-lock.json
.github/workflows/: rust.yml
js/: index.js
pkg/: html_diff.d.ts  html_diff.js  html_diff_bg.d.ts  html_diff_bg.wasm  index.d.ts  index_bg.js  index_bg.wasm  package.json
src/: collapse_html.rs  lib.rs  main.rs
templates/: base.html  diff_form.html  diff_results.html
tests/: diff_test.rs
