[package]
name = "html_diff"
version = "1.0.0"
authors = ["becker <github@deathbyescalator.com>"]
edition = "2018"

[dependencies]
regex = "1"
difference = "2.0"
actix-web = "2.0"
actix-rt = "2.2"
serde = "*"
futures = "*"
bytes = "*"
askama = { version = "*", features = ["with-actix-web", "mime", "mime_guess"] }
env_logger="*"
log="*"
[dev-dependencies]
pretty_assertions = "*"

[[bin]]
name = "html_diff"
doc = false
